--- a/index.html
+++ b/index.html
@@ -402,3 +402,4 @@ var design = anime({
   direction: 'reverse',
 });
 </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js"/>
