--- a/index.html
+++ b/index.html
@@ -1,4 +1,54 @@
+<html>
+    <head>
+        <style>
 
+body
+{
+ background-color: #606468;
+}
+#tyre1, #tyre2
+{
+   transform-box: fill-box;
+    transform-origin: center;
+}
+
+ #padel
+{
+   transform-box: fill-box;
+    transform-origin: 91% 49%;
+}
+</style>  
+<script>
+    var design = anime({
+  targets: '#cycle #firstRoad, #XMLID_34_',
+  translateY: -7,
+  easing: 'easeInOutSine',
+  duration: 1000,
+  delay: function(el, i) { return i * 250 },
+  direction: 'alternate',
+  loop: true
+});
+
+
+var design = anime({
+  targets: '#cycle #tyre1,#tyre2',
+   rotate: 360, 
+  easing: 'linear',
+  loop: true,
+  direction: 'reverse',
+});
+
+var design = anime({
+  targets: '#cycle #padel',
+   rotate: 360, 
+  easing: 'linear',
+  loop: true,
+  duration: 3000,
+  direction: 'reverse',
+});
+</script>
+    </head>
+    <body>
 <div class="container">
     <div class="row">
       <div class="col-md-8 col-sm-8 mx-auto">
@@ -355,51 +405,7 @@
     </div>
     </div>
     </div>
-<style>
 
-body
-{
- background-color: #606468;
-}
-#tyre1, #tyre2
-{
-   transform-box: fill-box;
-    transform-origin: center;
-}
-
- #padel
-{
-   transform-box: fill-box;
-    transform-origin: 91% 49%;
-}
-</style>  
-<script>
-    var design = anime({
-  targets: '#cycle #firstRoad, #XMLID_34_',
-  translateY: -7,
-  easing: 'easeInOutSine',
-  duration: 1000,
-  delay: function(el, i) { return i * 250 },
-  direction: 'alternate',
-  loop: true
-});
-
-
-var design = anime({
-  targets: '#cycle #tyre1,#tyre2',
-   rotate: 360, 
-  easing: 'linear',
-  loop: true,
-  direction: 'reverse',
-});
-
-var design = anime({
-  targets: '#cycle #padel',
-   rotate: 360, 
-  easing: 'linear',
-  loop: true,
-  duration: 3000,
-  direction: 'reverse',
-});
-</script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js"/>
+    </body>
+</html>
