--- a/index.html
+++ b/index.html
@@ -1,23 +1,6 @@
 <html>
     <head>
-        <style>
-
-body
-{
- background-color: #606468;
-}
-#tyre1, #tyre2
-{
-   transform-box: fill-box;
-    transform-origin: center;
-}
-
- #padel
-{
-   transform-box: fill-box;
-    transform-origin: 91% 49%;
-}
-</style>  
+       
 <script>
     var design = anime({
   targets: '#cycle #firstRoad, #XMLID_34_',
@@ -49,6 +32,24 @@ var design = anime({
 </script>
     </head>
     <body>
+         <style>
+
+body
+{
+ background-color: #606468;
+}
+#tyre1, #tyre2
+{
+   transform-box: fill-box;
+    transform-origin: center;
+}
+
+ #padel
+{
+   transform-box: fill-box;
+    transform-origin: 91% 49%;
+}
+</style>  
 <div class="container">
     <div class="row">
       <div class="col-md-8 col-sm-8 mx-auto">
@@ -406,6 +407,6 @@ var design = anime({
     </div>
     </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js"/>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js"></script>
     </body>
 </html>
